--- a/.github/workflows/publish_swatches.yml
+++ b/.github/workflows/publish_swatches.yml
@@ -12,8 +12,10 @@ on:
         default: 'master'
 
   workflow_run:
-    workflows: [ "Publish to npm" ]
-    types: [ completed ]
+    workflows:
+      - "Publish to npm"
+    types:
+      - completed
 
 jobs:
 
