--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "serve-tests": "http-server ./ -c-1",
     "embed-assets": "gulp assets",
     "create-component": "gulp create-component",
-    "update": "npx npm-check-updates --upgrade"
+    "update": "npx npm-check-updates --upgrade",
+    "prepack": "lerna exec -- cp package.json package.json.orig && lerna exec -- npm pkg delete scripts",
+    "postpack": "lerna exec -- mv -f package.json.orig package.json"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs}": "eslint"
