--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -35,7 +35,8 @@
     "nuget-pack": "jq '.version' package.json | xargs nuget pack package.nuspec -Version",
     "nuget-push": "nuget push *.nupkg -ApiKey $NUGET_API_KEY -Source $NUGET_FEED -SkipDuplicate",
     "prepublishOnly": "node ../../scripts/themes-prepublish.js",
-    "postpublish": "echo 'no postpublish for utils'"
+    "postpublish": "echo 'no postpublish for utils'",
+    "prepack": "cp package.json package.json.orig && jq '.scripts={}' package.json.orig > package.json"
   },
   "dependencies": {
     "@progress/kendo-theme-core": "^5.12.1-dev.0"
