revert: revert several commits that broke the build
* e57e756dab3ffec05a683657f8b2b17f71984ee5
* b045a3b60d39c9cfe84515dc2a92088fd2993f15
* 83bfab1a4c2f1cab1b057bb9e1234c2048dea67b
* 780e083f656fc4dee03d98bf9b5d6f702de57359

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "setup": "bash ./scripts/setup.sh",
     "clean": "find . -name \"node_modules\" -type d -prune | xargs rm -rf",
     "clean:dist": "find ./packages -name \"dist\" -type d -prune -maxdepth 2 | xargs rm -rf",
+    "clean:tests": "node ./scripts/cleanup-test-results.js",
     "bootstrap": "lerna clean && lerna bootstrap",
     "dist:flat": "gulp dist:flat",
     "dist:swatches": "gulp dist:swatches",
@@ -65,8 +66,6 @@
     "docs:check": "npm run docs && lerna exec -- git diff --exit-code --quiet -- docs/",
     "utils-docs": "gulp utils-docs",
     "render-test-pages": "node ./scripts/render-test-pages.mjs",
-    "update-tests-meta": "node ./scripts/update-tests-meta.js",
-    "cleanup-test-results": "npm run update-tests-meta && node ./scripts/cleanup-test-results.js",
     "create-screenshots": "./build/create-screenshots.sh",
     "serve-tests": "http-server ./ -c-1",
     "embed-assets": "gulp assets",
