chore(docs): refactor documentation logic so all packages can be documented

--- a/packages/fluent/.sassdocrc
+++ b/packages/fluent/.sassdocrc
@@ -2,7 +2,7 @@
     "src": "scss",
     "dest": "docs",
     "meta": {
-        "name": "classic",
-        "friendlyName": "Classic"
+        "name": "fluent",
+        "friendlyName": "Fluent"
     }
 }
