--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "html-validate": "html-validate tests",
     "lint": "npm run eslint && npm run sasslint",
     "lint-staged": "lint-staged --verbose",
-    "docs": "gulp docs",
+    "docs": "lerna run docs",
     "docs:check": "npm run docs && lerna exec -- git diff --exit-code --quiet -- docs/",
     "utils-docs": "gulp utils-docs",
     "render-test-pages": "node ./scripts/render-test-pages.mjs",
