--- a/packages/core/.sassdocrc
+++ b/packages/core/.sassdocrc
@@ -2,7 +2,7 @@
     "src": "scss",
     "dest": "docs",
     "meta": {
-        "name": "classic",
-        "friendlyName": "Classic"
+        "name": "core",
+        "friendlyName": "Theme Core"
     }
 }
