--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "serve-tests": "http-server ./ -c-1",
     "embed-assets": "gulp assets",
     "create-component": "gulp create-component",
-    "update": "npx npm-check-updates --upgrade",
-    "postpack": "lerna exec -- mv -f package.json.orig package.json"
+    "update": "npx npm-check-updates --upgrade"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs}": "eslint"
