--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,6 @@
     "nuget-pack": "jq '.version' package.json | xargs nuget pack package.nuspec -Version",
     "nuget-push": "nuget push *.nupkg -ApiKey $NUGET_API_KEY -Source $NUGET_FEED -SkipDuplicate",
     "prepublishOnly": "node ../../scripts/themes-prepublish.js",
-    "postpublish": "echo 'no postpublish for core theme'",
-    "prepack": "cp package.json package.json.orig && jq '.scripts={}' package.json.orig > package.json"
+    "postpublish": "echo 'no postpublish for core theme'"
   }
 }
