--- a/packages/html-spec/package.json
+++ b/packages/html-spec/package.json
@@ -31,7 +31,6 @@
   },
   "scripts": {
     "build": "node ./scripts/build.js",
-    "prepublishOnly": "npm run build",
-    "prepack": "cp package.json package.json.orig && jq '.scripts={}' package.json.orig > package.json"
+    "prepublishOnly": "npm run build"
   }
 }
