--- a/packages/material/package.json
+++ b/packages/material/package.json
@@ -49,7 +49,7 @@
     "postpublish": "echo 'no postpublish for material theme'"
   },
   "dependencies": {
-    "@progress/kendo-font-icons": "^1.0.0",
+    "@progress/kendo-font-icons": "1.2.0",
     "@progress/kendo-theme-core": "^6.0.2",
     "@progress/kendo-theme-default": "^6.0.2",
     "@progress/kendo-theme-utils": "^6.0.2"
