--- a/.github/workflows/_render-test-pages.yml
+++ b/.github/workflows/_render-test-pages.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Install
         if: steps.cache-root-node_modules.outputs.cache-hit != 'true'
         run: |
-          npm ci --no-audit --no-fund
+          npm ci --no-optional --no-audit --no-fund
 
       - name: Bootstrap
         run: |
