ci: update minimum node version in workflows to 16.x

--- a/.github/workflows/_render-test-pages.yml
+++ b/.github/workflows/_render-test-pages.yml
@@ -4,10 +4,10 @@ on:
   workflow_call:
     inputs:
       node-version:
-        description: 'Version of node tp use'
+        description: 'Version of node to use'
         required: false
         type: number
-        default: 14
+        default: 16
       force-render:
         description: 'Always render images, regardless of git changes'
         required: false
