--- a/.github/workflows/_lint-scripts.yml
+++ b/.github/workflows/_lint-scripts.yml
@@ -22,7 +22,7 @@ jobs:
         id: setup-node
         uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: 16.x
 
       - name: Use cache for root node_modules
         id: cache-root-node_modules
@@ -34,7 +34,7 @@ jobs:
       - name: Install
         if: steps.cache-root-node_modules.outputs.cache-hit != 'true'
         run: |
-          npm ci --no-audit --no-fund
+          npm ci --no-optional --no-audit --no-fund
 
       - name: Bootstrap
         run: |
