--- a/.github/workflows/publish_npm_dev.yml
+++ b/.github/workflows/publish_npm_dev.yml
@@ -56,6 +56,7 @@ jobs:
           npm run sass
           npm run sass:flat
           npm run dist:swatches
+          npm run docs
 
       - name: Lerna publish
         run: |
