--- a/.github/workflows/publish_npm_dev.yml
+++ b/.github/workflows/publish_npm_dev.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: develop
+          fetch-depth: '0'
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Setup git
