ci: specify exact dependencies with lerna publish

--- a/.github/workflows/publish_npm.yml
+++ b/.github/workflows/publish_npm.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Lerna publish
         run: |
-          npx lerna publish --conventional-commits --conventional-graduate --create-release github
+          npx lerna publish --conventional-commits --conventional-graduate --create-release github --force-publish --exact
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
