--- a/.github/workflows/publish_npm_dev.yml
+++ b/.github/workflows/publish_npm_dev.yml
@@ -61,6 +61,6 @@ jobs:
 
       - name: Lerna publish
         run: |
-          npx lerna publish --canary --preid dev --dist-tag dev --allow-branch develop --force-publish --yes
+          npx lerna publish --canary --preid dev --dist-tag dev --allow-branch develop --force-publish --exact --yes
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
