chore(html): change html package infrastucture to support new jsx specs

--- a/packages/html/tsconfig.json
+++ b/packages/html/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es6",
         "moduleResolution": "node",
-        "jsx": "react",
+        "jsx": "react-jsx",
         "isolatedModules": true,
         "esModuleInterop": true,
         "emitDeclarationOnly": true,
