--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -96,7 +96,7 @@
             ],
             "extends": [
                 "eslint:recommended",
-                "plugin:react/recommended",
+                "plugin:react/jsx-runtime",
                 "plugin:@typescript-eslint/eslint-recommended",
                 "plugin:@typescript-eslint/recommended"
             ],
