--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "build": "node ./scripts/build.js",
     "build:tests": "node ./scripts/build-tests.js",
-    "check-types": "npx tsc src/index.ts --noEmit --emitDeclarationOnly false --jsx react",
+    "check-types": "npx tsc src/index.ts --noEmit --emitDeclarationOnly false --jsx react-jsx",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
