--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -36,6 +36,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@progress/kendo-svg-icons": "^1.4.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
