--- a/.github/workflows/_lint-styles.yml
+++ b/.github/workflows/_lint-styles.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Lint styles
         run: |
-          npm run sasslint
+          npm run stylelint
 
       - name: Ensure standalone build
         run: |
