--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -35,7 +35,7 @@
     "build": "node ./scripts/build.js && npm run typegen",
     "typegen": "tsc --emitDeclarationOnly --declaration --declarationDir dist/",
     "build:tests": "node ./scripts/build-tests.js",
-    "check-types": "npx tsc src/index.ts --noEmit --emitDeclarationOnly false --jsx react-jsx",
+    "check-types": "npx tsc --noEmit --emitDeclarationOnly false --project tsconfig.json ",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
