chore: configure linting for pre commit and pre push hooks

--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "test-contrast": "node ./scripts/test-contrast.mjs"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,mjs}": "eslint"
+    "*.{js,jsx,ts,tsx,mjs}": "eslint",
+    "*.{css,scss}": "stylelint"
   },
   "husky": {
     "hooks": {
