--- a/.github/workflows/publish_swatches.yml
+++ b/.github/workflows/publish_swatches.yml
@@ -23,7 +23,20 @@ jobs:
     runs-on: 'ubuntu-latest'
     if: ${{ github.event.inputs.ref || github.event.workflow_run.conclusion == 'success' }}
 
+    permissions:
+        id-token: write # Required by Akeyless
+        contents: read
+        packages: read
+
     steps:
+      - name: Import Secrets
+        id: import-secrets
+        uses: LanceMcCarthy/akeyless-action@v3
+        with:
+          access-id: ${{ secrets.GH_AKEYLESS_ACCESS_ID }}
+          static-secrets: '{ "/WebComponents/prod/tokens/GH_TOKEN": "GH_TOKEN" }'
+          export-secrets-to-environment: false
+
       - name: Checkout branch
         uses: actions/checkout@v3
         with:
@@ -56,7 +69,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: telerik/themes-cdn
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ steps.import-secrets.outputs.GH_TOKEN }}
           path: themes-cdn
           lfs: true
 
