--- a/packages/default/package.json
+++ b/packages/default/package.json
@@ -37,6 +37,7 @@
   },
   "scripts": {
     "build": "sass-build",
+    "watch": "node ../../scripts/watch-theme",
     "sass": "sass-build",
     "sass:standalone": "sass-build -c sass-standalone.config.js",
     "docs": "node ../../scripts/sassdoc.js",
