--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -31,6 +31,7 @@
   },
   "scripts": {
     "build": "sass-build",
+    "watch": "node ../../scripts/watch-theme",
     "sass": "sass-build",
     "docs": "node ../../scripts/sassdoc.js",
     "predocs": "npm run resolve-variables",
