chore: cleanup unused deps and code

--- a/package.json
+++ b/package.json
@@ -6,20 +6,17 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@commitlint/core": "^17.0.0",
-    "@progress/dss": "^1.0.1",
     "@progress/kendo-e2e": "^1.0.0",
     "@progress/kendo-theme-tasks": "^1.17.5",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
-    "chai": "^4.3.6",
     "chokidar": "^3.5.3",
     "esbuild": "^0.17.15",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
     "glob": "^10.2.2",
     "gulp": "^4.0.2",
-    "html-validate": "^7.1.1",
     "http-server": "^14.1.1",
     "husky": "^7.0.4",
     "lerna": "^5.5.2",
@@ -55,7 +52,6 @@
     "build": "npm run sass && npm run build:scripts",
     "build:scripts": "npm run build --prefix packages/html",
     "build:tests": "npm run build:tests --prefix packages/html",
-    "serve": "npm run sass && npm run build:scripts && npm run build:tests && npm run serve-tests",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx,mjs}\"",
     "check-types": "npm run check-types --prefix packages/html",
     "stylelint": "stylelint \"**/*.scss\"",
@@ -63,11 +59,9 @@
     "lint": "npm run eslint && npm run stylelint",
     "lint-staged": "lint-staged --verbose",
     "docs": "lerna run docs",
-    "docs:check": "npm run docs && lerna exec -- git diff --exit-code --quiet -- docs/",
-    "utils-docs": "gulp utils-docs",
+    "docs:check": "npm run docs && lerna exec --ignore @progress/kendo-themes-html -- git diff --exit-code --quiet -- docs/",
     "render-test-pages": "node ./scripts/render-test-pages.mjs",
     "create-screenshots": "./build/create-screenshots.sh",
-    "serve-tests": "http-server ./ -c-1",
     "embed-assets": "gulp assets",
     "create-component": "gulp create-component",
     "update": "npx npm-check-updates --upgrade",
